// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots NameValueTable Empty 1`] = `
<div>
  <dl
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  />
</div>
`;

exports[`Storyshots NameValueTable With Children 1`] = `
<div>
  <dl
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <dt
      class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
    >
      MyName0
    </dt>
    <dd
      class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
    >
      <span
        class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
      >
        MyValue0
      </span>
    </dd>
    <dt
      class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
    >
      MyName1
    </dt>
    <dd
      class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
    >
      <span
        class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
      >
        MyValue1
      </span>
    </dd>
    <dt
      class="MuiGrid-root makeStyles-metadataLast makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
    >
      MyName2
    </dt>
    <dd
      class="MuiGrid-root makeStyles-metadataLast makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
    >
      <span
        class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
      >
        MyValue2
      </span>
    </dd>
  </dl>
</div>
`;

exports[`Storyshots NameValueTable With Hidden Last Children 1`] = `
<div>
  <dl
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
  >
    <dt
      class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
    >
      MyName0
    </dt>
    <dd
      class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
    >
      <span
        class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
      >
        MyValue0
      </span>
    </dd>
    <dt
      class="MuiGrid-root makeStyles-metadataLast makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
    >
      MyName1
    </dt>
    <dd
      class="MuiGrid-root makeStyles-metadataLast makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
    >
      <span
        class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
      >
        MyValue1
      </span>
    </dd>
  </dl>
</div>
`;
